# klicker-uzh

./: .babelrc  .babelrc.js  .bithoundrc  .codebeatignore  .codeclimate.yml  .dockerignore  .env  .env.prod  .env.travis  .eslintignore  .eslintrc  .eslintrc.js  .flowconfig  .gitattributes  .gitignore  .gitmodules  .graphqlconfig  .happo.js  .lintstagedrc.mjs  .npmrc  .prettierignore  .prettierrc.js  .prettierrc.mjs  .sonarcloud.properties  .syncpackrc.js  .syncpackrc.mjs  .tool-versions  .travis.yml  .versionrc.js  CHANGELOG.md  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  Dockerfile.frontend.traced  Dockerfile.prod  LICENSE.md  README.md  _d_down.sh  _d_run_app.sh  (+46 more)
apps/analytics/: .gitignore  Dockerfile  daily_participant_analytics.ipynb  main.py  pyproject.toml  requirements.txt  schema.prisma  test.ipynb
apps/analytics/prisma/: sync-schemas.py
apps/analytics/prisma/schema/: py.prisma
apps/analytics/src/: __init__.py
apps/analytics/src/modules/: __init__.py
apps/analytics/src/modules/participant_analytics/: __init__.py  aggregate_analytics.py  compute_correctness.py  compute_participant_analytics.py  compute_participant_course_analytics.py  get_participant_responses.py  save_participant_analytics.py
apps/analytics/src/notebooks/: daily_participant_analytics.ipynb  notebook.ipynb  participant_analytics.ipynb
deploy/migrate/: .env.template  .gitignore  dump.sh  dump_mongodb.sh  dump_redis.py  migrate_redis.py  pyproject.toml  redisdl.py  restore.sh  restore_mongodb.sh  restore_redis.py  restore_redis.sh  sync_s3.sh  sync_s3_test.sh
(+3498 files in other folders)
